--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "iio/libmergepdf",
+    "name": "webadev/libmergepdf",
     "description": "Library for merging multiple PDFs",
     "keywords": ["pdf", "merge"],
-    "homepage": "https://github.com/hanneskod/libmergepdf",
+    "homepage": "https://github.com/webadev/libmergepdf",
     "type": "library",
     "license": "WTFPL",
     "authors": [
@@ -20,7 +20,7 @@
         ]
     },
     "require": {
-        "php": "^7.1||^8.0",
+        "php": "^8.1",
         "tecnickcom/tcpdf": "^6.2.22",
         "setasign/fpdi": "^2"
     },
@@ -29,7 +29,7 @@
         "rafikhaceb/tcpdi": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7|^8",
+        "phpunit/phpunit": "^8",
         "smalot/pdfparser": "~0.13"
     }
 }
